--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-snf-ganeti (2.5-1) UNRELEASED; urgency=low
+snf-ganeti (2.5.0+ippool+private+rapi-1) stable; urgency=low
 
   GRNET-specific package against google's master branch
   The package contains google's current master branch +
-  GRNET's RBD support
+  GRNET's IP pool management
 
- -- Constantinos Venetsanopoulos <cven@grnet.gr>  Fri, 16 Dec 2011 11:07:08 +0200
+ -- Dimitris Aragiorgis <dimara@grnet.gr>  Thu, 26 Apr 2012 11:07:08 +0200
