--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-snf-ganeti (2.6.0rc3+grnet-1) stable; urgency=low
+snf-ganeti (2.7.0~rc1-1) stable; urgency=low
 
   GRNET-specific package against google's master branch
   The package contains google's current master branch +
